--- a/about.html
+++ b/about.html
@@ -75,6 +75,18 @@
               <li><a href="https://kildekompasset.no/referansestiler/apa-7th/"> <b>\\</b> kildekompasset.no. APA 7th. <em>University of Stavanger</em></a></li><br>
               <li><a href="https://www.matvett.no/bransje/tall-og-fakta"> <b>\\</b> Callewaert, P., Hanssen, O. J., Prestrud, K., Stesgård, A. E.(2019). Matsvinn i Norge: Rapportering av nøkkeltall 2018.<em>Østfoldforskning AS</em>, s. 4 og s. 7.</a></li><br>
               <li><a href="https://www.foodandwine.com/news/11-ways-stop-wasting-food?fbclid=IwAR1miRXNDcwJbABdUWBcNF7eegJP3mH3DXiNN6l4i6xCw9SBR2cv_76lSNA"> <b>\\</b> Walsh, J. M. (2015). 11 Ways to Stop Wasting Food, foodandwine.com. <em>Meredith Corporation</em> (date fetched: 23.11.2020)</a></li><br>
+              <li><a href="https://www.uaex.edu/life-skills-wellness/food-safety/preservation/drying-foods.aspx"> <b>\\</b> Preserving food by drying them (2020). Preserving food by drying them.<em>uaex.edu</em> (date fetched: 23.11.2020)</a></li><br>
+              <li><a href="https://www.dryingallfoods.com/10-amazing-benefits-of-dehydrating-food/"> <b>\\</b> Piccolo, M.(2020). 10 Amazing Benefits of Dehydrating Food. <em>dryingallfoods.com</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://www.thekitchn.com/refrigerator-freezer-organizing-hacks-268116"> <b>\\</b> Freedman, Lisa. (2019). The 30 Most Brilliant Tricks of All Time for Organizing Your Fridge and Freezer. <em>thekitchn.com</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://www.thekitchn.com/refrigerator-freezer-organizing-hacks-268116"> <b>\\</b> Freedman, Lisa. (2019). The 30 Most Brilliant Tricks of All Time for Organizing Your Fridge and Freezer. <em>thekitchn.com</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://coop.no/obs/tips--rad/kjokkenutstyr--borddekking/derfor-er-vakuumpakker-sa-genialt/"> <b>\\</b>Aasen, T. (2018). Derfor er vakuumpakker så genialt. <em>coop.no</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://coop.no/obs/tips--rad/kjokkenutstyr--borddekking/derfor-er-vakuumpakker-sa-genialt/"> <b>\\</b>Aasen, T. (2018). Derfor er vakuumpakker så genialt. <em>coop.no</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://www.delish.com/cooking/g1457/healthy-smoothie-recipes/"> <b>\\</b>Flager, M.(2020). 21 Delicious Smoothie Recipes For When You Need A Healthy Breakfast On The Go.  <em>delish.com</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://www.jessicagavin.com/raspberry-apple-smoothie-bananas/"> <b>\\</b>Gavin, J. (2016). Apple Smoothie with Raspberries. <em>jessicagavin.com</em> (date retrieved 26.11.2020)</a></li><br>
+              <li><a href="https://cooking.nytimes.com/recipes/1019729-rose-apple-tart"> <b>\\</b>Arefi, Y. (2016). Rose Apple Tart. <em>cooking.nytimes.com</em> (date retrieved 26.11.2020)</a></li><br>
+              <li><a href="https://foolproofliving.com/apple-salad/"> <b>\\</b>Sanford, A. (2012). Healthy apple salad with raisins and walnuts.<em>foolproofliving.com</em> (date retrieved 26.11.2020)</a></li><br>
+              <li><a href="https://www.tasteofhome.com/recipes/apple-pie/"> <b>\\</b> <em>Apple pie</em> (2020). Apple pie.<em>Tasteofhome.com</em> (date retrieved 26.11.2020)</a></li><br>
+              <li><a href="https://www.fjordbox.no/rodt-eple/ "> <b>\\</b> <em>Rødt eple</em> (2018). Rødt eple.<em>fjordbox.no</em> (date retrieved 26.11.2020)</a></li><br>
             </ul>
       </div>
 
