La inn litt mer tekst bare under <div>

--- a/tips.html
+++ b/tips.html
@@ -38,8 +38,12 @@
           bacteria will help to keep food at its best quality.
           Your food will last longer which will also help you to save money.
           <br>
+          In the beginning, it can be hard to start practicing this into a daily habit.
+          Therefore, we have come up with easy beginner tips that you can put into your daily routine.
+          These tips are easy to get used to, to remember and to do.
           <br>
-          Here are some solutions to start your new journey:
+          <br>
+          We are happy to help establish your new journey:
           </p>
         </div>
       </div>
