about-page + contact-page
css: formatering av tekst og meldingsboks + legge til kilde

--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
               <li><a href="https://foolproofliving.com/apple-salad/"> <b>\\</b>Sanford, A. (2012). Healthy apple salad with raisins and walnuts.<em>foolproofliving.com</em> (date retrieved 26.11.2020)</a></li><br>
               <li><a href="https://www.tasteofhome.com/recipes/apple-pie/"> <b>\\</b> <em>Apple pie</em> (2020). Apple pie.<em>Tasteofhome.com</em> (date retrieved 26.11.2020)</a></li><br>
               <li><a href="https://www.fjordbox.no/rodt-eple/ "> <b>\\</b> <em>Rødt eple</em> (2018). Rødt eple.<em>fjordbox.no</em> (date retrieved 26.11.2020)</a></li><br>
+              <li><a href="https://www.youtube.com/watch?v=1MpfEeSem_4&fbclid=IwAR01rGEYy7yHe95EteVd7-SgzIPLj-BEoPaNWUmoMQ5hf8bhhvtFsGgyreQ">Our Changing Climate. (march 27. 2020). Food Waste causes Climate Change. Here's how we stop it.</a></li>
             </ul>
       </div>
 
