fra liten h til stor h

--- a/tips.html
+++ b/tips.html
@@ -28,7 +28,7 @@
     <div class="tips-container">
       <div class="tips-col">
         <div class="tips-col-h">
-          <h1>why food preservation is important</h1>
+          <h1>Why food preservation is important</h1>
         </div>
         <div class="tips-col-p">
           <p>Preservation methods help inhibit bacterial growth meaning the food will be safe
