Update tekst på hjemsiden

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="msg-container">
         <div id="slider">
           <div class="msg-col">
-            <h1>About</h1>
-            <p>We are 7 student who believe in NOT wasting food.
-              We want to make booklets/ an app where the user can learn and get the full benefit of their food.
-              Some of the information we cover is: what foods last longer than others,
-              what parts of a plant you can or can’t eat,
-              easy recipes on how to make food of what you already have at home and a
-              lot of other tips and solutions!</p>
+            <h1>Our Goal</h1>
+            <p>
+            Our goal is to open people's minds about food waste. 
+            We desire to educate society on how to get the full benefit of their food so they don't have to throw food unnecessary. 
+            We care for our environment and by reaching out to people about this concerning problem we hope that the ones that hear 
+            us will become a part of us and join our journey.
+            </p>
               <a href="about.html">Learn More</a>
           </div>
           <div class="msg-col">
