--- a/app.html
+++ b/app.html
@@ -25,7 +25,6 @@
       </ul>
     </header>
 
-
     <div class="app-container">
       <h1>The application</h1>
       <img class="app-img" src="img/App5.png" alt="Five pictures of a layout of an app.">
@@ -45,7 +44,12 @@
 
         <h2>Recipes</h2>
         <p>Here you can select and search for the recipe that includes the food item.</p>
+      </div>
 
+      <div class="download-button">
+        <p>Get our app here!</p>
+        <form action="https://xd.adobe.com/view/a9ab5e07-3c4f-43e9-be80-99b22a921cca-fcf8/">
+        <button class="btn"><i class="fa fa-download"></i>Download</button>
       </div>
 
     </div>
