--- a/app.html
+++ b/app.html
@@ -60,6 +60,12 @@
         <p>Here you can select and search for the recipe that includes the food item.</p>
       </div>
 
+      <div class="download-button">
+        <p>Get our app here!</p>
+        <form action="https://xd.adobe.com/view/a9ab5e07-3c4f-43e9-be80-99b22a921cca-fcf8/">
+        <button class="btn"><i class="fa fa-download"></i>Download</button>
+      </div>
+
     </div>
 
 
