--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <p>The UN Food and Agriculture Organization estimates that globally almost ⅓ of food produced
         for consumption gets eaten. <br>Food waste has been estimated to be responsible for roughly 8% of global emissions.
         A study from 2018 shows that the household sector accounts for more than half of all food waste in Norway
-        and in total 1/3 of all food goes straight into the bin (matvett, 2019).
+        and in total ⅓ of all food goes straight into the bin (matvett, 2019).
         It is not good for the environment nor is it economically appropriate.
         The same study showed that from 2015 - 2018 we had a decrease of 16,000 tons of food waste.
         This corresponds to a 12% decrease per capita.
