--- a/app.html
+++ b/app.html
@@ -28,7 +28,7 @@
 
     <div class="app-container">
       <h1>The application</h1>
-      <img class="app-img" src="img/App5.png" alt="Five pictures of a layout of an app.">
+      <img class="app-img" src="img/app55.png" alt="Five pictures of a layout of an app.">
       <div class="app-text">
         <p>There is a point in your life where you have to be independent and your finances aren't the greatest.
           You might then want to save money and be sensible with your choices.
