--- a/app.html
+++ b/app.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="download-button">
-        <p>Get our app here!</p>
+        <h5>Get our app here!</h5>
         <form action="https://xd.adobe.com/view/a9ab5e07-3c4f-43e9-be80-99b22a921cca-fcf8/">
         <button class="btn"><i class="fa fa-download"></i>Download</button>
       </div>
