--- a/about.html
+++ b/about.html
@@ -29,16 +29,16 @@
       <h1>The UN Sustainable Development Goal 2:
         <br>Zero Hunger</h1>
       <h3>The UN's sustainability Goal 2 is to eradicate hunger, achieve food security and better nutrition,
-        and promote sustainable agriculture (UN Sustainability Goal, 2020).
-        <br>The UN says that there is enough food for everyone in the world today,
+        and promote sustainable agriculture (UN Sustainability Goal, 2020).</h3>
+        <p>The UN says that there is enough food for everyone in the world today,
         but due to the skewed distribution we have today, some in the world are starving,
         while others throw away food because they have too much.
-        <br>The goal is to be able to distribute the resources more fairly and take care of the food in a better way than we do today.
-        <br>
+        <br><br>The goal is to be able to distribute the resources more fairly and take care of the food in a better way than we do today.
+        <br><br>
         Sub-goal 2.4 states: "By 2030, ensure that there are sustainable food production systems,
         and introduce robust methods that increase productivity and production, that help maintain ecosystems,
         that strengthen the capacity to adapt to climate change, extreme weather, droughts, floods and other disasters,
-        and that gradually improves the quality of land and soil. </h3>
+        and that gradually improves the quality of land and soil.</p>
       <h2>Seen from another point of view</h2>
       <p>The UN Food and Agriculture Organization estimates that globally almost ⅓ of food produced
         for consumption gets eaten. <br>Food waste has been estimated to be responsible for roughly 8% of global emissions.
