--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Final Project NOwaste</title>
   </head>
 
-  <body>
+  <body><!--
 
     <header class="header">
       <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
@@ -23,6 +23,32 @@
         <li><a href="app.html">App</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+    </header>-->
+
+    <header>
+      <div class="navbar">
+        <input type="checkbox" id="navbar-check">
+        <div class="navbar-head">
+          <div class="navbar-logo">
+            <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
+          </div>
+        </div>
+        <div class="navbar-button" id="menu-nav">
+          <label for="navbar-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+
+        <div class="links-navbar">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="tips.html">Solutions</a>
+          <a href="app.html">App</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
     </header>
 
     <div class="homepage-container">
@@ -80,7 +106,7 @@
         <div id="linje4" title="4. Slide"></div>
         <div id="active" title="5. Slide"></div>
       </div>
-      
+
       <section class="content-main" id="contentMain">
         <div class="picture-wrapper">
           <img src="img/app1.png" alt="App">
