--- a/about.html
+++ b/about.html
@@ -12,17 +12,30 @@
 
   <body>
 
-    <header class="header">
-      <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
-      <input type="checkbox" class="menu-btn" id="menu-btn">
-      <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="tips.html">Solutions</a></li>
-        <li><a href="app.html">App</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+    <header>
+      <div class="navbar">
+        <input type="checkbox" id="navbar-check">
+        <div class="navbar-head">
+          <div class="navbar-logo">
+            <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
+          </div>
+        </div>
+        <div class="navbar-button" id="menu-nav">
+          <label for="navbar-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+
+        <div class="links-navbar">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="tips.html">Solutions</a>
+          <a href="app.html">App</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
     </header>
 
     <div class="about-container">
