--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </script>
 
       <noscript class="noscript-main">
-        javascript not supported
+        Javascript not enabled.
       </noscript>
 
     </div>
