--- a/index.html
+++ b/index.html
@@ -10,20 +10,7 @@
     <title>Final Project NOwaste</title>
   </head>
 
-  <body><!--
-
-    <header class="header">
-      <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
-      <input type="checkbox" class="menu-btn" id="menu-btn">
-      <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="tips.html">Solutions</a></li>
-        <li><a href="app.html">App</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </header>-->
+  <body>
 
     <header>
       <div class="navbar">
