--- a/app.html
+++ b/app.html
@@ -41,7 +41,13 @@
 
     <div class="app-container">
       <h1>The application</h1>
-      <img class="app-img" src="img/app55.png" alt="Five pictures of a layout of an app.">
+      <ul>
+        <li><img class="app-img" src="img/appSP.jpg" alt="Five pictures of a layout of an app."></li>
+        <li><img class="app-img" src="img/appC.jpg" alt="Five pictures of a layout of an app."></li>
+        <li><img class="app-img" src="img/appS.jpg" alt="Five pictures of a layout of an app."></li>
+        <li><img class="app-img" src="img/appIn.jpg" alt="Five pictures of a layout of an app."></li>
+        <li><img class="app-img" src="img/appR.jpg" alt="Five pictures of a layout of an app."></li>
+      </ul>
       <div class="app-text">
         <p>There is a point in your life where you have to be independent and your finances aren't the greatest.
           You might then want to save money and be sensible with your choices.
